fixed spacing on classroom

--- a/src/Pages/Classroom/Classroom.scss
+++ b/src/Pages/Classroom/Classroom.scss
@@ -1,8 +1,8 @@
 .classroom_main {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
-    margin: 25px;
+    // margin: 25px;
     flex-direction: column;
     box-sizing: border-box;
 
@@ -49,7 +49,7 @@
         
         .description_container {
             border: 1px solid blue;
-            margin: 20px;
+            // margin: 20px;
             width: 50%;
             height: 100%;
             box-sizing: border-box;
